--- a/index.html
+++ b/index.html
@@ -759,19 +759,28 @@
                 <div class="VSlide">
                   <div class="cardsContainer cardsContainerH">
                     <div class="card">
-                        <dotlottie-player src="animations/grafica-animada.json" background="transparent" speed="1" style="width: 140px; height: 140px" direction="1" playMode="normal" loop autoplay></dotlottie-player>
+                      <div class="grafica-barras contrato-indefinido">
+                        <div class="barra barra-interior"></div>
+                        <div class="barra barra-exterior"></div>
+                      </div>  
                       <h4><span class="animCounter">94.82</span>%</h4>
                       <p class="smallText">de nuestros trabajadores se encuentra en situación de <strong>contrato indefinido</strong></p>
                     </div>
                     <div class="card">
-                      <dotlottie-player src="animations/grafica-animada.json" background="transparent" speed="1" style="width: 140px; height: 140px" direction="1" playMode="normal" loop autoplay></dotlottie-player>
+                      <div class="grafica-barras plantilla">
+                        <div class="barra barra-interior"></div>
+                        <div class="barra barra-exterior"></div>
+                      </div>  
                       <h4><span class="animCounter">11.68</span>%</h4>
                       <p class="smallText">de nuestra plantilla realiza funciones <strong>comerciales</strong></p>
                     </div>
                   </div>
                   <div class="cardsContainer cardsContainerH">
                     <div class="card">
-                      <dotlottie-player src="animations/grafica-animada.json" background="transparent" speed="1" style="width: 140px; height: 140px" direction="1" playMode="normal" loop autoplay></dotlottie-player>
+                      <div class="grafica-barras labor">
+                        <div class="barra barra-interior"></div>
+                        <div class="barra barra-exterior"></div>
+                      </div>  
                       <h4><span class="animCounter">88.32</span>%</h4>
                       <p class="smallText">lleva a cabo una labor <strong>administrativa</strong></p>
                     </div>
@@ -852,7 +861,7 @@
                 </div>
                 </div>
                 <div class="VSlide">
-                  <img class="imgHeader" src="img/sostenibilidad.jpg" />
+                  <dotlottie-player src="animations/green-enviroment.json" background="transparent" speed="1" style="width: 200px; height: 200px" direction="1" playMode="normal" loop autoplay></dotlottie-player>
                   <h2 class="red">Medio Ambiente</h2>
                   <p class="bigText">Nuestro impacto ambiental positivo por recuperación de residuos de papel y cartón crece cada año en cuanto a toneladas recuperadas, árboles no talados, ahorro de agua, de energía y emisión de CO2 evitada.</p>
                 </div>
