--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@
 
         </div>
         <div class="linksDescargaContainer">
-          <a class="linkDescarga1 linkDescarga" href="#"><svg width="37" height="38" viewBox="0 0 37 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <a class="linkDescarga1 linkDescarga" href="#">
+            <svg width="37" height="38" viewBox="0 0 37 38" fill="none" xmlns="http://www.w3.org/2000/svg">
             <mask id="mask0_2_48" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="37" height="38">
             <rect y="0.5" width="37" height="37" fill="#D9D9D9"/>
             </mask>
@@ -184,8 +185,12 @@
       ========================================================================== -->  
        <div id="seccion1" class="seccion1">
         <div class="HScrollContainer">
+          <!--<div class="inner">-->
+
+  
           <div class="Hpanel tituloSeccion"><h2>Información de negocio</h2></div>
           <div class="Hpanel portadaSeccion"><h3 class="quote">«Lo que separa a los emprendedores exitosos de los que no han tenido éxito es puramente la perseverancia» .—Steve Jobs</h3></div>
+          <!-- </div>-->
         </div>
         <div class="VScrollContainer">
           <div class="Vpanel">
@@ -196,7 +201,7 @@
               <div class="VSlide">
                 <h2 class="red">Hechos relevantes del ejercicio 2022</h2> 
                 <h2>Volumen de negocio<br><span class="animNumber colorBlue">806.979.509,76€</span></h2>
-                <p class="bigText">Nos encontramos entre las 20 primeras entidades de seguros y somos la segunda mutua del Estado.</p>
+                <p class="bigText mt2">Nos encontramos entre las 20 primeras entidades de seguros y somos la segunda mutua del Estado.</p>
                 <div class="cardsContainer cardsContainerH">
                   <div class="card">
                     <div class="iconContainer">
@@ -225,15 +230,9 @@
                 </div>
                   <div class="cardsContainer cardsContainerH">
                     <div class="card BGred">
-                      <div class="iconContainer bgRed">
-                        <img width="100" src="img/iconos-summit.svg"/>
-                      </div>
                       <p>Cesión de la cartera de salud de Murimary adquisición de posición mayoritaria en IPRESA</p>
                     </div>   
                   <div class="card BGred">
-                    <div class="iconContainer bgRed">
-                      <img width="100" src="img/iconos-summit.svg"/>
-                    </div>
                     <p>Obtención de la autorización para operar en el ramo de Caución y comercialización de las primeras pólizas.</p>
                   </div>
                 </div>
@@ -241,7 +240,7 @@
               </div>
               <div class="VSlide">
                 <h2 class="red">Primas</h2>
-                <h2>Volumen de negocio<br><span class="animCounter">806979509.76</span>€</h2>
+                <h2>Volumen de negocio<br><span class="animNumber colorBlue">806.979.509,76€</span></h2>
                 <lottie-player
                 autoplay
                 loop
@@ -352,7 +351,7 @@
               </div>
               <div class="spacer"></div>
               <div class="VSlide">
-                <h2 class="red">Crecimiento <br>por ramos</h2>
+                <h2 class="red">Crecimiento por ramos</h2>
                   <div class="cardsContainer cardsContainerH">
                     <div class="card">
                       <div class="iconContainer">
@@ -931,7 +930,7 @@
                         <div class="barra barra-interior"></div>
                         <div class="barra barra-exterior"></div>
                       </div>  
-                      <h4><span class="animCounter">94.82</span>%</h4>
+                      <h4><span>94.82</span>%</h4>
                       <p>de nuestros trabajadores se encuentra en situación de <strong>contrato indefinido</strong></p>
                     </div>
                     <div class="card">
@@ -939,7 +938,7 @@
                         <div class="barra barra-interior"></div>
                         <div class="barra barra-exterior"></div>
                       </div>  
-                      <h4><span class="animCounter">11.68</span>%</h4>
+                      <h4><span>11.68</span>%</h4>
                       <p>de nuestra plantilla realiza funciones <strong>comerciales</strong></p>
                     </div>
                   </div>
@@ -949,8 +948,8 @@
                         <div class="barra barra-interior"></div>
                         <div class="barra barra-exterior"></div>
                       </div>  
-                      <h4><span class="animCounter">88.32</span>%</h4>
-                      <p >lleva a cabo una labor <strong>administrativa</strong></p>
+                      <h4><span>88.32</span>%</h4>
+                      <p>lleva a cabo una labor <strong>administrativa</strong></p>
                     </div>
                     <div class="card">
                       <h4><span class="animCounterNoDecimals">15589</span></h4>
@@ -998,32 +997,32 @@
                   <div class="cardText">
                     <h3 class="bigText"><b>Entidades vinculadas a la salud, la investigación y divulgación</b></h3>
                       <ul class="logosContainer">
-                        <li><img width="200" src="img/logo-placeholder-image.png"/>Fundació La Marató de TV3</li>
-                        <li><img width="200" src="img/logo-placeholder-image.png"/>Fundació Pasqual Maragall</li>
-                        <li><img width="200" src="img/logo-placeholder-image.png"/>Hospital Sant Joan de Déu</li>
-                        <li><img width="200" src="img/logo-placeholder-image.png"/>Fundación Tutelar FECLEM</li>
-                        <li><img width="200" src="img/logo-placeholder-image.png"/>Fundació Privada Anne</li>
+                        <li><img width="200" src="img/logos/fundacio-la-marato.jpg"/>Fundació La Marató de TV3</li>
+                        <li><img width="200" src="img/logos/fundacio-pasqual-maragall.jpeg"/>Fundació Pasqual Maragall</li>
+                        <li><img width="200" src="img/logos/sant_joan_de_deu.jpg"/>Hospital Sant Joan de Déu</li>
+                        <li><img width="200" src="img/logos/feclem.jpg"/>Fundación Tutelar FECLEM</li>
+                        <li><img width="200" src="img/logos/fundacio-privada-anne.jpeg"/>Fundació Privada Anne</li>
                       </ul>
                   </div>
                   <div class="cardText">
                     <h3 class="bigText"><b>Entidades sociales y deportivas</b></h3>
                       <ul class="logosContainer">
-                        <li><img width="200" src="img/logo-placeholder-image.png"/>Fundación Mensajeros de la Paz</li>
-                        <li><img width="200" src="img/logo-placeholder-image.png"/>Fundación Las Claves de la Felicidad</li>
-                        <li><img width="200" src="img/logo-placeholder-image.png"/>Fundación Española Deporte Seguro (FEDS)</li>
-                        <li><img width="200" src="img/logo-placeholder-image.png"/>Fundación Somni dels Nens</li>
-                        <li><img width="200" src="img/logo-placeholder-image.png"/>Banc dels Aliments</li>
-                        <li><img width="200" src="img/logo-placeholder-image.png"/>Cruz Roja</li>
+                        <li><img width="200" src="img/logos/fundacio-mensajeros-de-la-paz.jpg"/>Fundación Mensajeros de la Paz</li>
+                        <li><img width="200" src="img/logos/fundacio-las-claves-felicidad.jpg"/>Fundación Las Claves de la Felicidad</li>
+                        <li><img width="200" src="img/logos/fundacio-española-deporte-seguro.jpg"/>Fundación Española Deporte Seguro (FEDS)</li>
+                        <li><img width="200" src="img/logos/fundacio-somni-dels-nens.jpg"/>Fundación Somni dels Nens</li>
+                        <li><img width="200" src="img/logos/banc-aliments.jpg"/>Banc dels Aliments</li>
+                        <li><img width="200" src="img/logos/cruz-roja.jpg"/>Cruz Roja</li>
                       </ul>
                   </div>
                   <div class="cardText">
                     <h3 class="bigText"><b>Entidades culturales y educativas</b></h3>
                       <ul class="logosContainer">
-                        <li><img width="200" src="img/logo-placeholder-image.png"/>Escola Pia de Sarrià</li>
-                        <li><img width="200" src="img/logo-placeholder-image.png"/>Fundación Abadia de Montserrat</li>
-                        <li><img width="200" src="img/logo-placeholder-image.png"/>Fundació Privada Catalana per l’Arqueologia Ibèrica</li>
-                        <li><img width="200" src="img/logo-placeholder-image.png"/>Fundació Gran Teatre del Liceu</li>
-                        <li><img width="200" src="img/logo-placeholder-image.png"/>Cinemanet</li>
+                        <li><img width="200" src="img/logos/Escola-pia.jpg"/>Escola Pia de Sarrià</li>
+                        <li><img width="200" src="img/logos/fundacio-abadia-montserrat.jpg"/>Fundación Abadia de Montserrat</li>
+                        <li><img width="200" src="img/logos/fundacio-arqueologia.jpg"/>Fundació Privada Catalana per l’Arqueologia Ibèrica</li>
+                        <li><img width="200" src="img/logos/fundacio-gran-teatre-liceu.jpg"/>Fundació Gran Teatre del Liceu</li>
+                        <li><img width="200" src="img/logos/cinemanet.jpg"/>Cinemanet</li>
                       </ul>
                   </div>
                 </div>
@@ -1052,13 +1051,44 @@
               <div class="containerLinks">
                 <img src="img/logo-blue.svg" width="150" alt="logo">
                 <ul>
-                  <li><a href="#">Descargar Informe completo 2022</a></li>
-                  <li><a href="#">Descargar EINF 2022</a></li>
-                  <li><a href="#">Archivo Informes FIATC</a> </li>
-                    <ul>
-                      <li><a href="#">Informe 2023</a></li>
-                      <li><a href="#">Informe 2022</a></li>
-                    </ul>
+                  <li><a href="#">
+                    <svg width="37" height="38" viewBox="0 0 37 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <mask id="mask0_2_48" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="37" height="38">
+                      <rect y="0.5" width="37" height="37" fill="#000000"/>
+                      </mask>
+                      <g mask="url(#mask0_2_48)">
+                      <path d="M18.4999 24.5955L13.1258 19.2214L14.0607 18.3003L17.8477 22.0675V8.20834H19.1522V22.0675L22.9391 18.3003L23.874 19.2214L18.4999 24.5955ZM9.96144 29.7917C9.32994 29.7917 8.79654 29.574 8.36122 29.1387C7.92591 28.7034 7.70825 28.17 7.70825 27.5385V23.5282H9.01273V27.5385C9.01273 27.7757 9.11155 27.9931 9.3092 28.1907C9.50684 28.3884 9.72425 28.4872 9.96144 28.4872H27.0384C27.2756 28.4872 27.493 28.3884 27.6906 28.1907C27.8883 27.9931 27.9871 27.7757 27.9871 27.5385V23.5282H29.2916V27.5385C29.2916 28.17 29.0739 28.7034 28.6386 29.1387C28.2033 29.574 27.6699 29.7917 27.0384 29.7917H9.96144Z" fill="#000000"/>
+                      </g>
+                      </svg>
+                    Descargar Informe completo 2022</a></li>
+                  <li>
+                    <a href="#">
+                      <svg width="37" height="38" viewBox="0 0 37 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <mask id="mask0_2_48" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="37" height="38">
+                        <rect y="0.5" width="37" height="37" fill="#000000"/>
+                        </mask>
+                        <g mask="url(#mask0_2_48)">
+                        <path d="M18.4999 24.5955L13.1258 19.2214L14.0607 18.3003L17.8477 22.0675V8.20834H19.1522V22.0675L22.9391 18.3003L23.874 19.2214L18.4999 24.5955ZM9.96144 29.7917C9.32994 29.7917 8.79654 29.574 8.36122 29.1387C7.92591 28.7034 7.70825 28.17 7.70825 27.5385V23.5282H9.01273V27.5385C9.01273 27.7757 9.11155 27.9931 9.3092 28.1907C9.50684 28.3884 9.72425 28.4872 9.96144 28.4872H27.0384C27.2756 28.4872 27.493 28.3884 27.6906 28.1907C27.8883 27.9931 27.9871 27.7757 27.9871 27.5385V23.5282H29.2916V27.5385C29.2916 28.17 29.0739 28.7034 28.6386 29.1387C28.2033 29.574 27.6699 29.7917 27.0384 29.7917H9.96144Z" fill="#000000"/>
+                        </g>
+                        </svg>
+                      Descargar EINF 2022</a></li>
+                  <li><a href="#">
+                   <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                  viewBox="0 0 31 32" enable-background="new 0 0 31 32" xml:space="preserve">
+                <g>
+                  <path fill="#000000" d="M7.2,26.1c-0.6,0-1.1-0.2-1.5-0.6S5.1,24.6,5.1,24V7.7c0-0.6,0.2-1.1,0.6-1.5s0.9-0.6,1.5-0.6h16.3
+                    c0.6,0,1.1,0.2,1.5,0.6s0.6,0.9,0.6,1.5V24c0,0.6-0.2,1.1-0.6,1.5s-0.9,0.6-1.5,0.6H7.2z M7.2,24.8h16.3c0.2,0,0.4,0,0.6-0.2
+                    c0.1-0.1,0.2-0.3,0.2-0.6v-3.5h-4.6c-0.5,0.8-1.1,1.4-1.9,1.9c-0.8,0.4-1.6,0.7-2.5,0.7s-1.7-0.2-2.5-0.7c-0.8-0.4-1.4-1.1-1.9-1.9
+                    H6.3V24c0,0.2,0,0.4,0.2,0.6C6.6,24.7,6.8,24.8,7.2,24.8L7.2,24.8z M15.3,21.7c0.8,0,1.5-0.2,2.2-0.7s1.1-1.1,1.4-1.9h5.4V7.7
+                    c0-0.2,0-0.4-0.2-0.6C24,7,23.8,6.9,23.5,6.9H7.2c-0.2,0-0.4,0-0.6,0.2C6.5,7.2,6.4,7.4,6.4,7.7v11.5h5.4c0.3,0.8,0.7,1.4,1.4,1.9
+                    s1.4,0.7,2.2,0.7L15.3,21.7z M7.2,24.8H6.4h17.9H7.2z"/>
+                </g>
+                </svg>
+                    Archivo Informes FIATC</a> </li>
+                 
+                      <li>  
+                        <a href="#">Informe 2023</a></li>
+                
                 </ul>
               </div>
 
