--- a/index.html
+++ b/index.html
@@ -241,16 +241,14 @@
               <div class="VSlide">
                 <h2 class="red">Primas</h2>
                 <h2>Volumen de negocio<br><span class="animNumber colorBlue">806.979.509,76€</span></h2>
-                <img src="animations/grafica-animada.gif"/>
-                <!-- 
                 <lottie-player
                 autoplay
                 loop
                 mode="normal"
                 src="animations/grafica_animada.json"
-                style="width: 320px; height: 320px;"
+                style="width: 200px; height: 200px;"
               >
-              </lottie-player> -->
+              </lottie-player>
                 <p class="bigText">Crecimiento del <strong>4,41 %</strong> respecto al ejercicio anterior.</p>
                 <p>El volumen de negocio de Andorra fue de <strong>3.528.691,44 euros</strong> con un crecimiento del 5,03 %.</p>
               <div class="primas-container desktop">
@@ -1036,14 +1034,12 @@
                 <div class="VSlide">
                   <h2 class="red">Medio Ambiente</h2>
                   <p class="bigText">Nuestro impacto ambiental positivo por recuperación de residuos de papel y cartón crece cada año en cuanto a toneladas recuperadas, árboles no talados, ahorro de agua, de energía y emisión de CO2 evitada.</p>
-                  <img src="animations/green-enviroment.gif"/>
-                   
                   <lottie-player
                     autoplay
                     loop
                     mode="normal"
                     src="animations/green-enviroment.json"
-                    style="width: 320px"
+                    style="width: 200px"
                   >
                   </lottie-player>
                 
